small fixes and text overflow db

--- a/public/stylesheets/user_style.css
+++ b/public/stylesheets/user_style.css
@@ -43,7 +43,6 @@ title {
   width: 35rem;
 }
 
-
 #userpicture img {
   margin: 10px 0px;
   border: 3px solid #3c3851;
@@ -68,20 +67,43 @@ title {
   grid-gap: 0.1rem;
   padding: 0.1rem;
   grid-template-columns: 10rem 30rem 10rem;
-  grid-auto-rows: 15rem;
+  grid-auto-rows: auto;
   margin-left: 23%;
   width: 52rem;
 }
 
+.results-container-user {
+  display: grid;
+  margin-bottom: 2rem;
+  grid-gap: 0.1rem;
+  padding: 0.1rem;
+  grid-template-columns: 10rem 30rem 10rem;
+  grid-auto-rows: auto;
+  margin-left: 23%;
+  width: 52rem;
+}
 
 .results-user-book-title {
   text-align: center;
-  margin-top: 5rem;
+  margin-top: 1rem;
 }
 
 .results-container > div {
   text-align: center;
 }
+
+.results-description {
+    text-align: left;
+    font-size: 16px;
+}
+
+
+.results-description:hover {
+  overflow: visible;
+}
+
+
+
 
 .result-title {
   font-size: 23px;
@@ -169,7 +191,6 @@ title {
   width: auto;
   height: 40px;
 }
-
 
 .imprintcontainer {
   text-align: left;
